--- a/Profile-light-dark-mode/style.css
+++ b/Profile-light-dark-mode/style.css
@@ -74,6 +74,25 @@ nav {
   padding: 25px;
   width: 100vw;
   background: rgb(255 255 255 / 50%);
+  backdrop-filter: blur(10px);
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  box-shadow: var(--box-shadow);
+}
+
+.theme-switch-wrapper {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  right: 25px;
+}
+
+.theme-switch {
+  display: inline-block;
+  height: 34px;
+  position: relative;
+  width: 60px;
 }
 
 a {
@@ -82,6 +101,8 @@ a {
   text-decoration: none;
   border-bottom: 3px solid transparent;
   font-weight: bold;
+  transition: all 0.3s ease-in-out;
+
 }
 
 a:hover,
@@ -93,6 +114,7 @@ a:focus {
 /* Home Section */
 .title-group {
   text-align: center;
+  margin-bottom: 50px;
 }
 
 /* About Section */
@@ -108,6 +130,9 @@ a:focus {
   width: auto;
   background: var(--background);
   box-shadow: var(--box-shadow);
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
 }
 .image-container:hover{
   transform: scale(1.1);
@@ -368,4 +393,75 @@ input:checked + .slider::before {
   .fab {
     margin-bottom: 15px;
   }
+}
+
+@media screen and (max-width: 400px) {
+  .title-group {
+    margin-top: 25px;
+  }
+
+  .theme-switch-wrapper {
+    top: 10px;
+    right: 10px;
+  }
+
+  .theme-switch-wrapper span {
+    font-size: 0.8rem;
+  }
+
+  .theme-switch {
+    height: 26px;
+    width: 46px;
+  }
+
+  .slider::before {
+    height: 22px;
+    width: 22px;
+  }
+
+  .fas {
+    font-size: 20px;
+  }
+
+  .fab {
+    font-size: 80px;
+  }
+
+  .text-box {
+    padding: 15px;
+  }
+
+  .image-container {
+    padding: 5px 10px;
+  }
+
+  img {
+    height: 200px;
+    width: 200px;
+  }
+
+  h1 {
+    font-size: 60px;
+  }
+
+  h2 {
+    font-size: 24px;
+  }
+
+  .buttons {
+    margin-bottom: 25px;
+  }
+
+  button {
+    height: 30px;
+    font-size: 12px;
+  }
+
+  .fab {
+    margin-bottom: 15px;
+  }
+}
+
+@media screen {
+  
 }
